--- a/JetRakuma/app/src/main/AndroidManifest.xml
+++ b/JetRakuma/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JetRakuma">
         <activity
-            android:name=".MainActivity"
+            android:name=".home.HomeActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.JetRakuma.NoActionBar">
