--- a/JetRakuma/app/build.gradle
+++ b/JetRakuma/app/build.gradle
@@ -62,4 +62,12 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    // kotlin
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+
+    // dagger hilt
+    classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.2'
+
+
 }
