--- a/JetRakuma/app/build.gradle
+++ b/JetRakuma/app/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material:1.1.0-beta04"
+
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
@@ -67,7 +68,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
     // dagger hilt
-    classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.2'
+    //classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.2'
 
 
 }
