--- a/JetRakuma/app/build.gradle
+++ b/JetRakuma/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.compose.material:material:1.1.0-beta04"
 
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     testImplementation 'junit:junit:4.+'
