--- a/JetRakuma/app/build.gradle
+++ b/JetRakuma/app/build.gradle
@@ -74,5 +74,10 @@ dependencies {
     // dagger hilt
     //classpath 'com.google.dagger:hilt-android-gradle-plugin:2.40.2'
 
+    // pager
+    implementation "com.google.accompanist:accompanist-pager:0.19.0" // Pager
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.19.0" // Pager Indicators
+
+
 
 }
